--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -52,6 +52,8 @@
         <action
             android:id="@+id/fromQueueToLoginFragment"
             app:destination="@id/loginFragment"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_right"
             app:popUpTo="@id/queueFragment"
             app:popUpToInclusive="true" />
     </fragment>
@@ -68,6 +70,8 @@
         <action
             android:id="@+id/fromHomeToLoginFragment"
             app:destination="@id/loginFragment"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_right"
             app:popUpTo="@id/homeFragment"
             app:popUpToInclusive="true" />
     </fragment>
