--- a/gmccareadmin/src/main/res/layout/activity_main.xml
+++ b/gmccareadmin/src/main/res/layout/activity_main.xml
@@ -7,13 +7,30 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/txt2"
+        android:id="@+id/tvDaftar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello Admin"
+        android:fontFamily="@font/montserrat_bold"
+        android:text="Daftar Antrian :"
+        android:textSize="24sp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_queue"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginVertical="16dp"
+        android:layout_marginEnd="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvDaftar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:listitem="@layout/row_item_queue" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
