--- a/gmccareadmin/src/main/res/values/colors.xml
+++ b/gmccareadmin/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#00C6AD</color>
+    <color name="colorPrimaryDark">#01AB95</color>
+    <color name="colorAccent">#FEBA2B</color>
+
+    <color name="colorNoName1">#EEFDFA</color>
+    <color name="colorNoName2">#E1F7F4</color>
+
+    <color name="colorBlack">#000</color>
+    <color name="colorWhite">#FFF</color>
+    <color name="colorHighlight">#21DFC6</color>
 </resources>
